# IBDiarization

./: AUTHORS  INSTALL  README.md
data/rttm/: AMI_20050204-1206.rttm
data/scp/: AMI_20050204-1206.scp
scripts/: run.diarizeme.qsub.sh  run.diarizeme.sh  run.diarizeme.tdoa.sh
src/aIB/include/: aIB.h  aglobal.h  aibfunctions.h  fileIO.h
src/aIB/src/: aIB.cpp  aibfunctions.cpp  compile  fileIO.cpp  runaib.cpp
src/aibfeat/include/: extract_features.h  featconfig.h  gmm.h  hmmreadwrite.h
src/aibfeat/src/: extract_features.cpp  gmm.cpp  hmmreadwrite.cpp
src/diarization/: README
src/diarization/cmake/: CMakeLists.txt
src/diarization/src/: diarizeme.cpp
src/diarization_wrapper/: config.py  diarization_wrapper.py  kaldi_mfcc.conf  test_diarization_wrapper.py
src/pydiarization/: README.md  config.py  diarization_wrapper.py  run.py  setup.py  test_diarization_local.sh  test_diarization_wrapper.py
src/pydiarization/conda_recipe/: build.sh  meta.yaml  run_test.sh
src/pydiarization/docker_test/: Dockerfile_conda  Dockerfile_pip
src/realign/include/: featfileread.h  rconfig.h  realign.h  rgmm.h  rhmm.h
src/realign/src/: featfileread.cpp  realign.cpp  rgmm.cpp  rhmm.cpp
src/utils/include/: global.h  scpread.h  tools.h  various_exceptions.h
src/utils/src/: global.cpp  scpread.cpp  tools.cpp  various_exceptions.cpp
